--- a/src/ui/product/post/Flair.pug
+++ b/src/ui/product/post/Flair.pug
@@ -17,12 +17,11 @@ span.flair(style="background: {color}; color: {(new Color(color)).asContrastHex(
 style.
 	.flair
 		align-items center
-		border 1px solid
-		border-radius 4px
+		border 1px solid var(--color)
+		border-radius 99px
 		display inline-flex
-		font-size 10px
-		font-weight bold
+		font-size 11px
 		gap 1ch
-		padding 0 1ch
+		padding 0 1em
 	.flair-emoji
 		height 16px
