ui: open reddit.com links without leaving client; various

--- a/src/ui/product/auth/AccountSwitcher.pug
+++ b/src/ui/product/auth/AccountSwitcher.pug
@@ -6,4 +6,4 @@ script.
 {#if status === 'logged-in'}
 	Button(action={() => { api.logout(); status = api.getLoginStatus() }} text='Log out')
 {:else}
-	Button(link={api.getLoginURL(location.pathname)} text='Log in ↗')
+	Button(link={api.getLoginURL(location.pathname)} text='Log in')
