--- a/src/ui/infra/Router.pug
+++ b/src/ui/infra/Router.pug
@@ -11,34 +11,35 @@ script.
 	import NotImplemented from './NotImplemented.pug'
 	import parseRoute from './parseRoute.coffee'
 	route = parseRoute(location)
-	navigate = (url, options = { replace: false }) ->
-		if options.replace
-			history.replaceState(null, null, url)
-		else
-			history.pushState(null, null, url)
-	document.addEventListener('mousedown',
+	#
+	# START SPA LINK HANDLING LOGIC
+	# Where possible, load internal reddit links without changing the document.
+	# Otherwise, fall back upon normal browser link-handling behavior.
+	#
+	internalNavigate = (url) ->
+		history.pushState(null, null, url)
+		route = parseRoute(location)
+	document.addEventListener 'mousedown',
 		(event) ->
-			if event.button is 0 and not (event.altKey or event.ctrlKey or event.metaKey or event.shiftKey)
-				parentLink = event.target.closest('a')
-				if parentLink?
-					if parentLink.origin is origin
-						if parentLink.pathname != location.pathname
-							navigate(new URL(parentLink.href))
-							route = parseRoute(location)
-							event.preventDefault()
-					else
-						location.href = parentLink.href
-						event.preventDefault())
-	document.addEventListener('keydown',
+			switch
+				when event.button is 0 and not (event.altKey or event.ctrlKey or event.metaKey or event.shiftKey)
+					link = event.target.closest('a')
+					if link
+						if link.origin is origin
+							if link.pathname is location.pathname then return # allow hash change scrolling behavior
+							else internalNavigate(new URL(link.href))
+						else location.href = link.href
+	document.addEventListener 'keydown',
 		(event) ->
-			if event.key is 'Enter' and not (event.altKey or event.ctrlKey or event.metaKey or event.shiftKey) and event.target.tagName is 'A' and event.target.origin is origin and event.target.pathname != location.pathname
-				navigate(new URL(event.target.href))
-				route = parseRoute(location)
-				event.preventDefault())
-	window.addEventListener('popstate',
+			if event.key is 'Enter' and not (event.altKey or event.ctrlKey or event.metaKey or event.shiftKey) and event.target.tagName is 'A'
+				link = event.target
+				if (link.origin is origin) and not (link.pathname is location.pathname) then internalNavigate(new URL(link.href))
+	window.addEventListener 'popstate',
 		(event) ->
 			route = parseRoute(location)
-			event.preventDefault())
+	#
+	# END SPA LINK HANDLING LOGIC
+	#
 
 {#key route}
 	{#if route.path === 'all'}
