--- a/src/ui/product/post/Comment.pug
+++ b/src/ui/product/post/Comment.pug
@@ -2,9 +2,11 @@ script.
 	import api from '../../../api/index.js'
 	import ActionText from '../generic/ActionText.pug'
 	import Avatar from '../user/Avatar.pug'
+	import Markup from '../generic/Markup.pug'
 	import Score from './Score.pug'
 	export id = null
 	export showReplies = true
+	export topLevel = false
 	comment = null
 	api.watch(id, (x) -> { data: comment } = x)
 
@@ -12,12 +14,15 @@ script.
 	<!-- 'comment' role is draft status and not recognized yet -->
 	<!-- svelte-ignore a11y-unknown-role -->
 	article.comment(role='comment')
+		{#if topLevel}
+			.comment-layout-score
+				Score(value={comment.score || comment.score_hidden})
 		.comment-layout-indent
 			Avatar(username={comment.author})
 			button.comment-line-separator
 		.comment-layout-core
 			.comment-body
-				{@html comment.body_html}
+				Markup(html={comment.body_html})
 			{#if showReplies && comment.replies.length > 0}
 				ol.comment-replies
 					{#each comment.replies as replyId}
@@ -33,11 +38,8 @@ style.
 	.comment
 		display flex
 		gap 1ch
-		margin-top 2em
+		margin-top 1.5em
 		position relative
-	.comment-body
-		background var(--commentcolor)
-		padding 1ch
 	:global(.comment-body img)
 		border-radius 6px
 		display inline
@@ -49,12 +51,15 @@ style.
 		display flex
 		flex 0 0 24px
 		flex-flow column nowrap
+	.comment-layout-score
+		position absolute
+		right calc(100% + 1em)
 	.comment-line-separator
-		background linear-gradient(to right, transparent 11px, currentColor 11px, currentColor 13px, transparent 13px)
+		background linear-gradient(to right, transparent 11px, currentColor 11px, currentColor 12px, transparent 12px)
 		flex 1
 		margin-top 1em
 		opacity 0.1
 	.comment-more-replies
-		margin-top 2em
+		margin-top 1.5em
 	.comment-replies
-		margin-top 2em
+		margin-top 1.5em
